@@ -3,7 +3,7 @@ package DBIx::Class::Helper::Row::NumifyGet;
 use strict;
 use warnings;
 
-# ABSTRACT: Force numeric context on numeric columns
+# ABSTRACT: Force numeric "context" on numeric columns
 
 sub get_column {
    my ($self, $col) = @_;
@@ -13,6 +13,19 @@ sub get_column {
    $value += 0 if $self->result_source->column_info($col)->{is_numeric};
 
    return $value;
+}
+
+sub get_columns {
+   my ($self, $col) = @_;
+
+   my %columns = $self->next::method($col);
+
+   for (keys %columns) {
+      $columns{$_} += 0
+         if $self->result_source->column_info($_)->{is_numeric};
+   }
+
+   return %columns;
 }
 
 1;
@@ -42,75 +55,14 @@ sub get_column {
 
 =head1 METHODS
 
-All the methods take a configuration hashref that looks like the following:
+=head2 get_column
 
- {
-    left_class          => 'Foo',
-    left_method         => 'foo',     # see NOTE
-    left_method_plural  => 'foos',    # see NOTE, not required, used for
-                                      # many_to_many rel name in right_class
-                                      # which is not generated by default
-    right_class         => 'Bar',
-    right_method        => 'bar',     # see NOTE
-    right_method_plural => 'bars',    # see NOTE, not required, used for
-                                      # many_to_many rel name in left_class
-                                      # which is not generated by default
-    namespace           => 'MyApp',   # default is guessed via *::Foo
-    self_method         => 'foobars', # not required, used for setting the name of the
-                                      # join table's relationship in a has_many
-                                      # which is not generated by default
- }
+This is the method that "converts" the values.  It just checks for
+C<is_numeric> and if that is true it will numify the value.
 
-=head2 join_table
+=head2 get_columns
 
-This is the method that you probably want.  It will set your table, add
-columns, set the primary key, and set up the relationships.
+This method also "converts" values, but this one is called a lot more rarely.
+Again, It just checks for C<is_numeric> and if that is true it will numify the
+value.
 
-=head2 add_join_columns
-
-Adds two non-nullable integer fields named C<"${left_method}_id"> and
-C<"${right_method}_id"> respectively.
-
-=head2 generate_has_manys
-
-Installs methods into C<left_class> and C<right_class> to get to the join table.
-The methods will be named what's passed into the configuration hashref as
-C<self_method>.
-
-=head2 generate_many_to_manys
-
-Installs many_to_many methods into C<left_class> and C<right_class>.  The
-methods will be named what's passed into the configuration hashref as
-C<left_method_plural> for the C<right_class> and C<right_method_plural> for the
-C<left_class>.
-
-=head2 generate_primary_key
-
-Sets C<"${left_method}_id"> and C<"${right_method}_id"> to be the primary key.
-
-=head2 generate_relationships
-
-This adds relationships to C<"${namespace}::Schema::Result::$left_class"> and
-C<"${namespace}::Schema::Result::$left_class"> respectively.
-
-=head2 set_table
-
-This method sets the table to "${left_class}_${right_class}".
-
-=head2 NOTE
-
-This module uses L<String::CamelCase> to default the method names and uses
-L<Lingua::EN::Inflect> for pluralization.
-
-=head1 CHANGES BETWEEN RELEASES
-
-=head2 Changes since 0.*
-
-Originally this module would use
-
-       data_type         => 'integer',
-       is_nullable       => 0,
-       is_numeric        => 1,
-
-for all joining columns.  It now infers C<data_type>, C<is_nullable>,
-C<is_numeric>, and C<extra> from the foreign tables.
