@@ -5,7 +5,7 @@ use warnings;
 
 use parent 'ParentSchema::Result::Foo';
 
-__PACKAGE__->load_components(qw{Helper::Row::SubClass Core});
+__PACKAGE__->load_components(qw{Helper::Row::NumifyGet Helper::Row::SubClass Core});
 
 __PACKAGE__->subclass;
 
